# supplier_item_picker

./: README.md  pyproject.toml
.github/workflows/: ci.yml
supplier_item_picker/: api.py  hooks.py  modules.txt
supplier_item_picker/public/js/: item.js  purchase_order.js
supplier_item_picker/supplier_item_picker/custom/: item_barcode.json
supplier_item_picker/supplier_item_picker/report/billed_items_to_be_delivered/: billed_items_to_be_delivered.js  billed_items_to_be_delivered.json  billed_items_to_be_delivered.py
supplier_item_picker/supplier_item_picker/report/display_and_storage_warehouse_stock_summary/: display_and_storage_warehouse_stock_summary.js  display_and_storage_warehouse_stock_summary.json  display_and_storage_warehouse_stock_summary.py
supplier_item_picker/supplier_item_picker/report/item_wise_sales_invoice_with_margin_and_discount/: item_wise_sales_invoice_with_margin_and_discount.js  item_wise_sales_invoice_with_margin_and_discount.json  item_wise_sales_invoice_with_margin_and_discount.py
supplier_item_picker/supplier_item_picker/workspace/uymatiao_trading_corporation/: uymatiao_trading_corporation.json
